imagini puse in folder

--- a/grid.html
+++ b/grid.html
@@ -22,7 +22,7 @@
     <main>
         <div class="grid-container">
             <div class="card">
-                <img src="catel1.jpg" width="300" height="300">
+                <img src="imagini/catel1.jpg" width="300" height="300">
                 <div class="card-content">
                     <h3>Rex</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident, repudiandae tempore
@@ -33,7 +33,7 @@
             </div>
 
             <div class="card">
-                <img src="catel2.jpg" width="300" height="300">
+                <img src="imagini/catel2.jpg" width="300" height="300">
                 <div class="card-content">
                     <h3>Max</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident, repudiandae tempore
@@ -44,7 +44,7 @@
             </div>
 
             <div class="card">
-                <img src="catel3.jpg" width="300" height="300">
+                <img src="imagini/catel3.jpg" width="300" height="300">
                 <div class="card-content">
                     <h3>Luna</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident, repudiandae tempore
