--- a/flex.html
+++ b/flex.html
@@ -24,7 +24,7 @@
         <main>
             <div class="flex-container">
                 <div class="card">
-                    <img src="catel1.jpg" width="300" height="300">
+                    <img src="imagini/catel1.jpg" width="300" height="300">
                     <div class="card-content">
                         <h3>Rex</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident, repudiandae tempore
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="catel2.jpg" width="300" height="300">
+                    <img src="imagini/catel2.jpg" width="300" height="300">
                     <div class="card-content">
                         <h3>Max</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident, repudiandae tempore
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="catel3.jpg" width="300" height="300">
+                    <img src="imagini/catel3.jpg" width="300" height="300">
                     <div class="card-content">
                         <h3>Luna</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident, repudiandae tempore
