--- a/grid.html
+++ b/grid.html
@@ -14,7 +14,7 @@
             <h2>grid</h2>
         </div>
         <div class="nav-links">
-            <a href="flex.html">Flexbox</a>
+            <a href="main.html">Flexbox</a>
             <a href="grid.html">Grid</a>
         </div>
     </nav>
